[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/MainMenu/contols.png" type="Texture" id=2]
[ext_resource path="res://Assets/MainMenu/start.png" type="Texture" id=3]
[ext_resource path="res://Assets/MainMenu/quit.png" type="Texture" id=5]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Transition.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Pixeled.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Assets/MainMenu/bg.png" type="Texture" id=14]

[sub_resource type="Animation" id=1]
resource_name = "animation"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/cutoff")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 13 )

[node name="Node" type="Node"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1200.0
margin_bottom = 960.0
texture = ExtResource( 14 )

[node name="MainMenu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 160.0
custom_constants/margin_right = 750
custom_constants/margin_top = 400
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu"]
margin_top = 400.0
margin_right = 450.0
margin_bottom = 960.0
custom_constants/separation = 30
alignment = 1

[node name="MenuOptions" type="VBoxContainer" parent="MainMenu/HBoxContainer"]
margin_left = 101.0
margin_right = 348.0
margin_bottom = 560.0
custom_constants/separation = 10

[node name="Start" type="TextureButton" parent="MainMenu/HBoxContainer/MenuOptions"]
margin_right = 247.0
margin_bottom = 83.0
texture_normal = ExtResource( 3 )

[node name="Controls" type="TextureButton" parent="MainMenu/HBoxContainer/MenuOptions"]
margin_top = 93.0
margin_right = 247.0
margin_bottom = 175.0
texture_normal = ExtResource( 2 )

[node name="Quit" type="TextureButton" parent="MainMenu/HBoxContainer/MenuOptions"]
margin_top = 185.0
margin_right = 247.0
margin_bottom = 259.0
texture_normal = ExtResource( 5 )

[node name="Timer" type="Timer" parent="MainMenu"]
wait_time = 3.0
one_shot = true

[node name="ColorRect" parent="." instance=ExtResource( 12 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
anims/animation = SubResource( 1 )

[node name="Label" type="Label" parent="ColorRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Welcome to Oakland Farm
Exile : Day 1"
align = 1
valign = 1
uppercase = true
[connection signal="button_down" from="MainMenu/HBoxContainer/MenuOptions/Start" to="MainMenu" method="_on_Start_button_down"]
[connection signal="button_down" from="MainMenu/HBoxContainer/MenuOptions/Controls" to="MainMenu" method="_on_Controls_button_down"]
[connection signal="button_down" from="MainMenu/HBoxContainer/MenuOptions/Quit" to="MainMenu" method="_on_Quit_button_down"]
[connection signal="timeout" from="MainMenu/Timer" to="MainMenu" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="ColorRect/AnimationPlayer" to="MainMenu" method="_on_AnimationPlayer_animation_finished"]

[editable path="ColorRect"]
